# tool-box

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
dictionary-src/: manifest.json
dictionary-src/extensions/: toolbox-extensions.json
scripts/: build-dictionary.mjs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: dictionary_seed.json
src-tauri/src/: dictionary.rs  lib.rs  main.rs
src/lib/: desktop.ts
src/workspaces/: TranslateWorkspace.css  TranslateWorkspace.tsx
