[package]
name = "tool-box"
version = "0.1.0"
description = "Desktop image toolbox built with Tauri"
edition = "2021"

[lib]
name = "tool_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
